force-app/main/default/objects/Contact/fields/Access_to_search_a_website__c.field-meta.xml
<CustomField>
    <fullName>Access_to_search_a_website__c</fullName>
    <inlineHelpText>Do you have access to technology to search a website?</inlineHelpText>
    <label>Access to search a website?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>