force-app/main/default/objects/Contact/fields/After_Submit_AD__c.field-meta.xml
<CustomField>
    <fullName>After_Submit_AD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After_Submit_AD</label>
    <type>Checkbox</type>
</CustomField>