force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF( NOT( ISBLANK(Birthdate) ) ,
  IF( DATE( YEAR (Birthdate) , MONTH(Birthdate) , DAY(Birthdate) ) &lt;= DATE( YEAR (Birthdate) , MONTH(TODAY()) , DAY(TODAY()) ),
     YEAR (Today()) - YEAR (Birthdate),
     YEAR (Today()) - YEAR (Birthdate) -1 ),
  null)</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>