force-app/main/default/objects/Contact/fields/Are_you_comfortable_with_Zoom_Classes__c.field-meta.xml
<CustomField>
    <fullName>Are_you_comfortable_with_Zoom_Classes__c</fullName>
    <inlineHelpText>Do you feel comfortable with the online platform Zoom to take a class online?</inlineHelpText>
    <label>Are you comfortable with Zoom Classes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>