force-app/main/default/objects/Contact/fields/Best_way_to_reach_you_Other__c.field-meta.xml
<CustomField>
    <fullName>Best_way_to_reach_you_Other__c</fullName>
    <label>Best way to reach you (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>