force-app/main/default/objects/Contact/fields/CCA_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>CCA_Provider_ID__c</fullName>
    <description>CCA ID for the Provider</description>
    <label>SF Provider ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>