force-app/main/default/objects/Contact/fields/Conviction_Summary__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Summary__c</fullName>
    <label>Conviction Summary</label>
    <type>TextArea</type>
</CustomField>