force-app/main/default/objects/Contact/fields/Days_to_Expire__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Expire__c</fullName>
    <formula>CPR_Valid_Till__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPR-Days to Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>