force-app/main/default/objects/Contact/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email-C</label>
    <type>Email</type>
</CustomField>