force-app/main/default/objects/Contact/fields/Enrollment_Check__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Check</label>
    <type>Checkbox</type>
</CustomField>