force-app/main/default/objects/Contact/fields/How_did_you_find_out_about_us_if_other__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_find_out_about_us_if_other__c</fullName>
    <label>How did you find out about us (if other)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>