force-app/main/default/objects/Contact/fields/Internet_Wifi_access_for_Online_Course__c.field-meta.xml
<CustomField>
    <fullName>Internet_Wifi_access_for_Online_Course__c</fullName>
    <inlineHelpText>Do you have access to the internet and/or Wifi to take an online course?</inlineHelpText>
    <label>Internet/Wifi access for Online Course?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>