force-app/main/default/objects/Contact/fields/Multi_ConsAffiliate__c.field-meta.xml
<CustomField>
    <fullName>Multi_ConsAffiliate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi ConsAffiliate</label>
    <type>Checkbox</type>
</CustomField>