force-app/main/default/objects/Contact/fields/No_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>No_Affiliation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Affiliation</label>
    <type>Checkbox</type>
</CustomField>