force-app/main/default/objects/Contact/fields/Rate_Of_Pay__c.field-meta.xml
<CustomField>
    <fullName>Rate_Of_Pay__c</fullName>
    <label>Rate Of Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>