force-app/main/default/objects/Contact/fields/Rate_of_Pay_How_often__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Pay_How_often__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate of Pay-How often?</label>
    <type>Checkbox</type>
</CustomField>