force-app/main/default/objects/Contact/fields/Receive_Confirmation_Letter_on_Email__c.field-meta.xml
<CustomField>
    <fullName>Receive_Confirmation_Letter_on_Email__c</fullName>
    <inlineHelpText>Help us save paper and go paperless! Opt in to receive your confirmation letter via email - Formerly used in Empower</inlineHelpText>
    <label>Receive Confirmation Letter on Email?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, send my letter via email</fullName>
            </value>
            <value>
                <fullName>No, I want my letter mailed to me</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>