force-app/main/default/objects/Contact/fields/Recruitment_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Assessment__c</fullName>
    <label>Recruitment Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already took CMMI Class</fullName>
            </value>
            <value>
                <fullName>Bad / Disconnected Number</fullName>
            </value>
            <value>
                <fullName>Bad Address</fullName>
            </value>
            <value>
                <fullName>Caring for family member cannot attend training</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
            <value>
                <fullName>IC Signed / Enrolled</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Left a Message</fullName>
            </value>
            <value>
                <fullName>No Childcare</fullName>
            </value>
            <value>
                <fullName>No Consumer Care</fullName>
            </value>
            <value>
                <fullName>No Longer Provider / Consumer</fullName>
            </value>
            <value>
                <fullName>No Money</fullName>
            </value>
            <value>
                <fullName>No Time (but would not specify)</fullName>
            </value>
            <value>
                <fullName>No Transportation</fullName>
            </value>
            <value>
                <fullName>Not Available (at the moment, but for the future)</fullName>
            </value>
            <value>
                <fullName>Not Current On Union Dues</fullName>
            </value>
            <value>
                <fullName>Not Home</fullName>
            </value>
            <value>
                <fullName>Not Interested / Declined</fullName>
            </value>
            <value>
                <fullName>Not Qualified/Eligible</fullName>
            </value>
            <value>
                <fullName>Not Union Member</fullName>
            </value>
            <value>
                <fullName>Outdated IC form (need new IC)</fullName>
            </value>
            <value>
                <fullName>Refused To Pay</fullName>
            </value>
            <value>
                <fullName>Refused w/o conversation</fullName>
            </value>
            <value>
                <fullName>Scheduled Appointment</fullName>
            </value>
            <value>
                <fullName>Special Project</fullName>
            </value>
            <value>
                <fullName>Too far</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
            <value>
                <fullName>Under 18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>