force-app/main/default/objects/Contact/fields/Rolodex_ID__c.field-meta.xml
<CustomField>
    <fullName>Rolodex_ID__c</fullName>
    <label>ULTCW Rolodex ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>