force-app/main/default/objects/Contact/fields/Rolodex_Type__c.field-meta.xml
<CustomField>
    <fullName>Rolodex_Type__c</fullName>
    <label>Rolodex Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>