force-app/main/default/objects/Contact/fields/Single_ConsAffiliate__c.field-meta.xml
<CustomField>
    <fullName>Single_ConsAffiliate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single ConsAffiliate</label>
    <type>Checkbox</type>
</CustomField>