force-app/main/default/objects/Contact/fields/Smart_phone__c.field-meta.xml
<CustomField>
    <fullName>Smart_phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smart phone?</label>
    <type>Checkbox</type>
</CustomField>