force-app/main/default/objects/Contact/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <label>Empower Provider ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>