force-app/main/default/objects/Contact/fields/Total_number_of_Consumer_s__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_Consumer_s__c</fullName>
    <label>Total number of Consumer&apos;s</label>
    <length>5</length>
    <type>Text</type>
</CustomField>