force-app/main/default/objects/Contact/fields/Total_number_of_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_Enrolled__c</fullName>
    <label>Total number of Enrolled</label>
    <length>5</length>
    <type>Text</type>
</CustomField>