force-app/main/default/objects/Contact/fields/Which_device_do_you_use_to_go_online__c.field-meta.xml
<CustomField>
    <fullName>Which_device_do_you_use_to_go_online__c</fullName>
    <label>Which device do you use to go online?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smartphone</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>