force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CCA_Provider_ID__c</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>Recruitment_Program__c</columns>
    <columns>Recruiter__c</columns>
    <columns>Recruitment_Status__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Provider</label>
</ListView>